--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -43,18 +46,20 @@ dependencies {
     implementation 'com.github.terrakok:cicerone:6.6'
 //Dagger2
     kapt 'com.google.dagger:dagger-compiler:2.24'
+    kapt 'com.google.dagger:dagger-android-processor:2.28.3'
     implementation 'com.google.dagger:dagger:2.28.3'
     implementation 'com.google.dagger:dagger-android-support:2.28.3'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.28.3'
     annotationProcessor "com.google.dagger:dagger-compiler:2.28.3"
 //Room
+    kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-runtime:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-rxjava2:2.3.0"
     implementation "androidx.room:room-rxjava3:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
 //Moxy
-    implementation "com.github.moxy-community:moxy:2.2.2"
     kapt "com.github.moxy-community:moxy-compiler:2.2.2"
+    implementation "com.github.moxy-community:moxy:2.2.2"
     implementation "com.github.moxy-community:moxy-ktx:2.2.2"
     implementation "com.github.moxy-community:moxy-androidx:2.2.2"
     implementation "com.github.moxy-community:moxy-material:2.2.2"
