--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,16 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file("api_key.properties").newDataInputStream())
+            def apikey = properties.getProperty("key", "")
+            it.buildConfigField "String", "API_KEY", apikey
+        }
+        debug {
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file("api_key.properties").newDataInputStream())
+            def apikey = properties.getProperty("key", "")
+            it.buildConfigField "String", "API_KEY", apikey
         }
     }
     buildFeatures {
@@ -42,6 +52,7 @@ dependencies {
 //RXJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 //Cicerone
     implementation 'com.github.terrakok:cicerone:6.6'
 //Dagger2
@@ -66,8 +77,7 @@ dependencies {
     annotationProcessor "com.github.moxy-community:moxy-compiler:2.2.2"
 //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 //Kotlin
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -83,6 +93,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 //Coil image download
     implementation("io.coil-kt:coil:0.9.2")
+    //Glide
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //View binding
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.6'
